--- a/appveyor.yml
+++ b/appveyor.yml
@@ -217,12 +217,14 @@ build_script:
     REM                                                                       *
     REM The ECHO runs the kivy.bat script that doesn't need any form of user  *
     REM interaction + DEBUG in the env forbids running the Touchtracer.       *
+    REM                                                                       *
+    REM (echoPset /p ___="y")P form sets a value without a newline from ECHO  *
     REM ***********************************************************************
 
     if "%ARCH%"=="86" (
-        (echo y)|kivy
+        (echo|set /p ___="y")|kivy.bat
     ) else if "%ARCH%"=="64" (
-        (echo n)|kivy
+        (echo|set /p ___="n")|kivy.bat
     )
 
     REM ***********************************************************************
